force-app/main/default/objects/PurgeTask__mdt/PurgeTask__mdt.object-meta.xml
<CustomObject>
    <label>PurgeTask</label>
    <pluralLabel>PurgeTask</pluralLabel>
</CustomObject>