force-app/main/default/objects/PurgeTask__mdt/fields/ClauseWhere__c.field-meta.xml
<CustomField>
    <fullName>ClauseWhere__c</fullName>
    <label>ClauseWhere</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>