force-app/main/default/objects/PurgeTask__mdt/fields/numberOfDayBefore__c.field-meta.xml
<CustomField>
    <fullName>numberOfDayBefore__c</fullName>
    <label>numberOfDayBefore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>