force-app/main/default/objects/PurgeTask__mdt/fields/RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeName__c</fullName>
    <label>RecordTypeName</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>